--- a/aware-ContextBroadcaster/src/main/AndroidManifest.xml
+++ b/aware-ContextBroadcaster/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher">
+            android:icon="@drawable/ic_action">
 
         <service
                 android:name=".Plugin"
