--- a/aware-ContextBroadcaster/src/main/AndroidManifest.xml
+++ b/aware-ContextBroadcaster/src/main/AndroidManifest.xml
@@ -1,19 +1,18 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.aware.plugin.contextbroadcaster"
-        android:versionCode="1"
-        android:versionName="0.1">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+        package="com.aware.plugin.contextbroadcaster">
 
-    <uses-sdk
-            android:minSdkVersion="9"
-            android:targetSdkVersion="19" />
-
+    <!--suppress AndroidDomInspection -->
+    <uses-permission tools:node="removeAll"/>
     <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA"/>
     <uses-permission android:name="com.aware.READ_CONTEXT_DATA"/>
+
+    <uses-feature tools:node="removeAll"/>
 
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_action">
+            android:icon="@drawable/ic_action"
+            tools:node="replace">
 
         <service
                 android:name=".Plugin"
