--- a/aware-cdm/build.gradle
+++ b/aware-cdm/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        minSdkVersion 9
+        minSdkVersion 1
         targetSdkVersion 21
         versionCode 1
         versionName "0.1"
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
