--- a/aware-cdm/src/main/AndroidManifest.xml
+++ b/aware-cdm/src/main/AndroidManifest.xml
@@ -1,11 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-        package="com.aware.cdm"
-        android:versionCode="1"
-        android:versionName="0.1">
-
-    <uses-sdk
-            android:minSdkVersion="9"
-            android:targetSdkVersion="21"/>
+        package="com.aware.cdm">
 
     <application/>
 
