--- a/aware-cdm/build.gradle
+++ b/aware-cdm/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+
+version = '0.1'
 
 android {
     compileSdkVersion 21
