--- a/aware-ContextPlugin/src/main/AndroidManifest.xml
+++ b/aware-ContextPlugin/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-        package="com.aware.plugin.contextbroadcaster">
+        package="com.aware.plugin.context">
 
     <!--suppress AndroidDomInspection -->
     <uses-permission tools:node="removeAll"/>
@@ -21,7 +21,7 @@
         </service>
 
         <activity
-                android:name="com.aware.plugin.contextbroadcaster.Settings"
+                android:name="com.aware.plugin.context.Settings"
                 android:configChanges="keyboardHidden|orientation|screenSize"
                 android:exported="true"
                 android:label="@string/app_name" >
