--- a/aware-context/build.gradle
+++ b/aware-context/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        minSdkVersion 1
+        minSdkVersion 9
         targetSdkVersion 22
         versionCode 1
         versionName "0.1"
@@ -29,6 +29,7 @@ android {
 
 dependencies {
     compile 'com.google.guava:guava:18.0'
+    compile 'com.google.code.gson:gson:2.3'
     compile 'com.awareframework:aware-core:3.3.3@aar'
     compile 'com.awareframework:aware-plugin-google_ActivityRecognition:6.3@aar'
     compile 'com.awareframework:aware-plugin-OpenWeather:1.3@aar'
