--- a/aware-ContextPlugin/src/main/AndroidManifest.xml
+++ b/aware-ContextPlugin/src/main/AndroidManifest.xml
@@ -8,6 +8,16 @@
 
     <uses-feature tools:node="removeAll"/>
 
+    <permission
+        android:name="com.aware.plugin.context.MANAGE_CONTEXT_DATA"
+        android:description="@string/manage_context_data_permission_description"
+        android:icon="@drawable/ic_action"
+        android:label="@string/manage_context_data_permission_label"
+        android:protectionLevel="normal"
+        />
+
+    <uses-permission android:name="com.aware.plugin.context.MANAGE_CONTEXT_DATA" />
+
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
@@ -15,17 +25,24 @@
             tools:node="replace">
 
         <service
-                android:name=".Plugin"
-                android:exported="true"
-                android:label="@string/app_name">
-        </service>
+            android:name=".Plugin"
+            android:exported="true"
+            android:label="@string/app_name"
+            />
 
         <activity
-                android:name="com.aware.plugin.context.Settings"
-                android:configChanges="keyboardHidden|orientation|screenSize"
-                android:exported="true"
-                android:label="@string/app_name" >
-        </activity>
+            android:name="com.aware.plugin.context.Settings"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:exported="true"
+            android:label="@string/app_name"
+            />
+
+        <service
+            android:name=".ContextService"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:permission="com.aware.plugin.context.MANAGE_CONTEXT_DATA"
+            />
 
     </application>
 
