SC# added ContextApplication class that extends android Application and allows singletons usage, AndroidManifest's application name set to ContextApplication to present desired usage, ContextPlugin's application class set to ContextApplication, Plugin service uses ContextApplication instance to get ContextManagement instance.

--- a/aware-context/src/main/AndroidManifest.xml
+++ b/aware-context/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest package="com.aware.context">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aware.context">
 
-    <application/>
+    <application android:name=".application.ContextApplication"/>
 
 </manifest>
