--- a/aware-ContextPlugin/src/main/AndroidManifest.xml
+++ b/aware-ContextPlugin/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:allowBackup="true"
             android:label="@string/app_name"
             android:icon="@drawable/ic_action"
+            android:name="com.aware.context.application.ContextApplication"
             tools:node="replace">
 
         <service
