--- a/aware-context/src/main/AndroidManifest.xml
+++ b/aware-context/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aware.context">
+<manifest package="com.aware.context">
 
-    <application android:name=".application.ContextApplication"/>
+    <application/>
 
 </manifest>
