CM# added testApplicationId option in defaultConfig to move test application to different package, so aware framework wouldn't detect it as aware plugin

--- a/aware-ContextPlugin/build.gradle
+++ b/aware-ContextPlugin/build.gradle
@@ -10,6 +10,7 @@ android {
         targetSdkVersion 22
         versionCode 1
         versionName "0.1"
+        testApplicationId "test.com.aware.plugin.context" //to disable aware framework plugin detection of tests
     }
 
     compileOptions {
