--- a/aware-ContextPlugin/build.gradle
+++ b/aware-ContextPlugin/build.gradle
@@ -11,6 +11,7 @@ android {
         versionCode 1
         versionName "0.1"
         testApplicationId "test.com.aware.plugin.context" //to disable aware framework plugin detection of tests
+        testInstrumentationRunner "com.aware.context.InstrumentationTestRunnerWithMocks" //to allow working with mocks
     }
 
     compileOptions {
