--- a/aware-ContextPlugin/src/main/AndroidManifest.xml
+++ b/aware-ContextPlugin/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         />
 
     <permission
-        android:name="com.aware.context.provider.current_context.READ"
+        android:name="com.aware.context.provider.context.READ"
         android:description="@string/read_current_context_data_permission_description"
         android:icon="@drawable/ic_action"
         android:label="@string/read_current_context_data_permission_label"
@@ -18,7 +18,7 @@
         />
 
     <permission
-        android:name="com.aware.context.provider.current_context.WRITE"
+        android:name="com.aware.context.provider.context.WRITE"
         android:description="@string/write_current_context_data_permission_description"
         android:icon="@drawable/ic_action"
         android:label="@string/write_current_context_data_permission_label"
@@ -31,8 +31,8 @@
     <uses-permission android:name="com.aware.READ_CONTEXT_DATA"/>
 
     <uses-permission android:name="com.aware.plugin.context.MANAGE_CONTEXT_DATA"/>
-    <uses-permission android:name="com.aware.context.provider.current_context.READ"/>
-    <uses-permission android:name="com.aware.context.provider.current_context.WRITE"/>
+    <uses-permission android:name="com.aware.context.provider.context.READ"/>
+    <uses-permission android:name="com.aware.context.provider.context.WRITE"/>
 
     <uses-feature tools:node="removeAll"/>
 
@@ -67,8 +67,8 @@
             android:name="com.aware.context.provider.ContextProvider"
             android:exported="true"
             android:label="@string/context_provider_label"
-            android:readPermission="com.aware.context.provider.current_context.READ"
-            android:writePermission="com.aware.context.provider.current_context.WRITE"
+            android:readPermission="com.aware.context.provider.context.READ"
+            android:writePermission="com.aware.context.provider.context.WRITE"
             />
 
     </application>
