--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -57,7 +57,7 @@
 
         <provider
             android:authorities="com.aware.plugin.poirecommender.provider.poirecommender"
-            android:name=".provider.ContextHistoryProvider"
+            android:name=".provider.PoiRecommenderProvider"
             android:exported="false"
             android:label="@string/poirecommender_provider_label"
             />
