--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -40,7 +40,7 @@
             />
 
         <service
-            android:name="com.aware.context.service.ContextService"
+            android:name=".service.PoiRecommenderService"
             android:exported="true"
             android:label="@string/app_name"
             android:permission="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"
