SC# created new library module aware-poirecommender that will store information about services and providers data that should be accessed from outside

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':aware-PoiRecommenderPlugin', ':aware-context'
+include ':aware-PoiRecommenderPlugin', ':aware-context', ':aware-poirecommender'
