RF# moved provider and service to poirecommender module, added dependency on aware-core

--- a/aware-poirecommender/build.gradle
+++ b/aware-poirecommender/build.gradle
@@ -28,5 +28,6 @@ android {
 }
 
 dependencies {
+    compile 'com.awareframework:aware-core:3.3.3@aar'
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
