--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -1,14 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
         package="com.aware.plugin.poirecommender">
 
-    <permission
-        android:name="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"
-        android:description="@string/manage_poirecommender_data_permission_description"
-        android:icon="@drawable/ic_context"
-        android:label="@string/manage_poirecommender_data_permission_label"
-        android:protectionLevel="dangerous"
-        />
-
     <!--suppress AndroidDomInspection -->
     <uses-permission tools:node="removeAll"/>
     <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA"/>
@@ -23,7 +15,7 @@
     <application
             android:allowBackup="true"
             android:label="@string/app_name"
-            android:icon="@drawable/ic_context"
+            android:icon="@drawable/ic_poirecommender"
             tools:node="replace">
 
         <service
