--- a/aware-poirecommender/src/main/AndroidManifest.xml
+++ b/aware-poirecommender/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aware.plugin.poirecommender">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aware.poirecommender">
 
     <permission
         android:name="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"
