--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-feature tools:node="removeAll"/>
 
     <application
+            android:name=".application.PoiRecommenderApplication"
             android:allowBackup="true"
             android:label="@string/app_name"
             android:icon="@drawable/ic_poirecommender"
