RF# added aware-context dependency to aware-poirecommender module

--- a/aware-poirecommender/build.gradle
+++ b/aware-poirecommender/build.gradle
@@ -28,6 +28,7 @@ android {
 }
 
 dependencies {
+    compile project(':aware-context')
     compile 'com.awareframework:aware-core:3.3.3@aar'
     compile 'com.android.support:appcompat-v7:22.0.0'
 }
