--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA"/>
     <uses-permission android:name="com.aware.READ_CONTEXT_DATA"/>
 
-    <uses-permission android:name="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"/>
+    <uses-permission android:name="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA"/>
     <uses-permission android:name="com.aware.context.provider.context.READ"/>
     <uses-permission android:name="com.aware.context.provider.context.WRITE"/>
 
@@ -36,7 +36,7 @@
             android:name=".service.PoiRecommenderService"
             android:exported="true"
             android:label="@string/app_name"
-            android:permission="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"
+            android:permission="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA"
             />
 
         <provider
