--- a/aware-poirecommender/src/main/AndroidManifest.xml
+++ b/aware-poirecommender/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.aware.poirecommender">
 
     <permission
-        android:name="com.aware.plugin.poirecommender.MANAGE_POIRECOMMENDER_DATA"
+        android:name="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA"
         android:description="@string/manage_poirecommender_data_permission_description"
         android:icon="@drawable/ic_poirecommender"
         android:label="@string/manage_poirecommender_data_permission_label"
