RF# added permission to access network state, internet and added service WebserviceHelper to allow synchronizing with Aware DB

--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -3,13 +3,16 @@
 
     <!--suppress AndroidDomInspection -->
     <uses-permission tools:node="removeAll"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA"/>
-    <uses-permission android:name="com.aware.READ_CONTEXT_DATA"/>
 
-    <uses-permission android:name="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA"/>
+    <uses-permission android:name="com.aware.READ_CONTEXT_DATA"/>
+    <uses-permission android:name="com.aware.WRITE_CONTEXT_DATA"/>
+
     <uses-permission android:name="com.aware.context.provider.context.READ"/>
     <uses-permission android:name="com.aware.context.provider.context.WRITE"/>
+    <uses-permission android:name="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA"/>
 
     <uses-feature tools:node="removeAll"/>
 
@@ -59,6 +62,15 @@
             android:label="@string/poirecommender_provider_label"
             />
 
+        <!-- AWARE -->
+        <service
+            android:name="com.aware.utils.WebserviceHelper"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="ACTION_AWARE_WEBSERVICE_SYNC_TABLE" />
+                <action android:name="ACTION_AWARE_WEBSERVICE_CLEAR_TABLE" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
