--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -44,7 +44,8 @@
             android:label="@string/app_name"
             android:permission="com.aware.poirecommender.MANAGE_POIRECOMMENDER_DATA">
             <intent-filter>
-                <action android:name="com.aware.poirecommender.service.PoiRecommenderService.ACTION_STORE_AND_RATE_POI_WITH_CONTEXT"/>
+                <action android:name="com.aware.poirecommender.service.PoiRecommenderService.ACTION_RATE_POI"/>
+                <action android:name="com.aware.poirecommender.service.PoiRecommenderService.ACTION_STORE_CONTEXT"/>
             </intent-filter>
         </service>
 
