--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -69,6 +69,11 @@
 
         <!-- AWARE -->
         <service
+            android:name="com.aware.utils.WearClient"
+            android:enabled="@bool/display_aware"
+            android:exported="true"
+            />
+        <service
             android:name="com.aware.utils.WebserviceHelper"
             android:exported="true" >
             <intent-filter>
