--- a/aware-PoiRecommenderPlugin/build.gradle
+++ b/aware-PoiRecommenderPlugin/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "${buildTools}"
 
     defaultConfig {
         applicationId "com.aware.plugin.poirecommender"
         minSdkVersion 10
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "0.1"
         testApplicationId "test.com.aware.plugin.poirecommender" //to disable aware framework plugin detection of tests
@@ -27,11 +27,14 @@ android {
 }
 
 dependencies {
-    compile project(':aware-context')
+    // main
     compile project(':aware-poirecommender')
-    androidTestCompile 'org.mockito:mockito-all:1.9.5'
-    androidTestCompile 'com.google.dexmaker:dexmaker:1.0'
-    androidTestCompile('com.google.dexmaker:dexmaker-mockito:1.0') {
+    compile "com.google.android.gms:play-services-base:${gms_version}"
+    compile "com.google.android.gms:play-services-wearable:${gms_version}"
+    // testing
+    androidTestCompile "org.mockito:mockito-all:${mockito_version}"
+    androidTestCompile "com.google.dexmaker:dexmaker:${dexmaker_version}"
+    androidTestCompile("com.google.dexmaker:dexmaker-mockito:${dexmaker_version}") {
         exclude group: 'org.hamcrest'
         exclude group: 'org.objenesis'
         exclude group: 'org.mockito'
