--- a/aware-context/build.gradle
+++ b/aware-context/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 version = '0.1'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "${buildTools}"
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "0.1"
     }
@@ -28,10 +28,6 @@ android {
 }
 
 dependencies {
-    compile 'com.google.guava:guava:18.0'
-    compile 'com.google.code.gson:gson:2.3'
-    compile 'com.awareframework:aware-core:3.5.6@aar'
-    compile 'com.awareframework:aware-plugin-google_ActivityRecognition:6.3@aar'
-    compile 'com.awareframework:aware-plugin-OpenWeather:1.3@aar'
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile "com.google.guava:guava:${guava_version}"
+    compile "com.google.code.gson:gson:${gson_version}"
 }
