--- a/aware-poirecommender/build.gradle
+++ b/aware-poirecommender/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'com.github.dcendents.android-maven'
 version = '0.1'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 23
+    buildToolsVersion "${buildTools}"
 
     defaultConfig {
         minSdkVersion 10
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 1
         versionName "0.1"
     }
@@ -29,6 +29,6 @@ android {
 
 dependencies {
     compile project(':aware-context')
-    compile 'com.awareframework:aware-core:3.5.6@aar'
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile "com.awareframework:aware-core:${awareCore_version}@aar"
+    compile "com.android.support:appcompat-v7:${supportLibrary_version}"
 }
