--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath "com.android.tools.build:gradle:${gradle_version}"
+        classpath "com.github.dcendents:android-maven-gradle-plugin:${androidMavenPlugin_version}"
     }
 }
 
