--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,23 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+# Project settings
+buildTools = 23
+gradle_version = 1.1.1
+androidMavenPlugin_version = 1.3
+
+# Main dependencies
+awareCore_version = 3.5.6
+
+# Android dependencies
+supportLibrary_version = 23.0.1
+gms_version = 7.8.0
+
+# Other dependencies
+guava_version = 18.0
+gson_version = 2.3.1
+
+# Testing dependencies
+mockito_version = 1.9.5
+dexmaker_version = 1.0
