CM# updated to new version of aware-core, made necessary changes to work with new aware-sync

--- a/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
+++ b/aware-PoiRecommenderPlugin/src/main/AndroidManifest.xml
@@ -81,6 +81,7 @@
                 <action android:name="ACTION_AWARE_WEBSERVICE_CLEAR_TABLE" />
             </intent-filter>
         </service>
+        <service android:name="com.aware.utils.SSLManager" android:exported="true" />
     </application>
 
 </manifest>
