--- a/aware-PoiRecommenderPlugin/build.gradle
+++ b/aware-PoiRecommenderPlugin/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     compile project(':aware-poirecommender')
     compile "com.google.android.gms:play-services-base:${gms_version}"
     compile "com.google.android.gms:play-services-wearable:${gms_version}"
+    compile "com.koushikdutta.ion:ion:${ion_version}"
     // testing
     androidTestCompile "org.mockito:mockito-all:${mockito_version}"
     androidTestCompile "com.google.dexmaker:dexmaker:${dexmaker_version}"
