--- a/gradle.properties
+++ b/gradle.properties
@@ -23,15 +23,16 @@ gradle_version = 1.5.0
 androidMavenPlugin_version = 1.3
 
 # Main dependencies
-awareCore_version = 3.5.6
+awareCore_version = 3.9.8
 
 # Android dependencies
 supportLibrary_version = 23.0.1
-gms_version = 7.8.0
+gms_version = 8.4.0
 
 # Other dependencies
 guava_version = 18.0
 gson_version = 2.3.1
+ion_version = 2.1.6
 
 # Testing dependencies
 mockito_version = 1.9.5
