--- a/aware-context/build.gradle
+++ b/aware-context/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-version = '0.1'
+version = '0.2'
 
 android {
     compileSdkVersion 23
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 10
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.2"
     }
 
     compileOptions {
@@ -30,4 +30,14 @@ android {
 dependencies {
     compile "com.google.guava:guava:${guava_version}"
     compile "com.google.code.gson:gson:${gson_version}"
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: nexusReleases) {
+                authentication(userName: nexusUser, password: nexusPassword)
+            }
+        }
+    }
 }
