--- a/aware-poirecommender/build.gradle
+++ b/aware-poirecommender/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
-version = '0.1'
+version = '0.2'
 
 android {
     compileSdkVersion 23
@@ -10,8 +10,8 @@ android {
     defaultConfig {
         minSdkVersion 10
         targetSdkVersion 23
-        versionCode 1
-        versionName "0.1"
+        versionCode 2
+        versionName "0.2"
     }
 
     compileOptions {
@@ -31,4 +31,14 @@ dependencies {
     compile project(':aware-context')
     compile "com.awareframework:aware-core:${awareCore_version}@aar"
     compile "com.android.support:appcompat-v7:${supportLibrary_version}"
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            repository(url: nexusReleases) {
+                authentication(userName: nexusUser, password: nexusPassword)
+            }
+        }
+    }
 }
