--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,9 @@ allprojects {
         jcenter()
         mavenLocal()
         mavenCentral()
+        maven {
+            url "http://balon.biz.tm:9000/repository/maven-public/"
+        }
     }
 
     group = 'com.awareframework'
